--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/error-message": "0.0.4",
     "@hookform/resolvers": "^1.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.8.0",
+    "react-collapse": "^5.1.0",
+    "react-dom": "^16.8.0",
+    "react-hook-form": "^6.11.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "sweetalert2": "^10.10.0",
+    "sweetalert2": "^10.10.1",
+    "typescript": "^4.1.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.30.0"
   },
