--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "axios": "^0.21.0",
     "react": "^16.8.0",
     "react-collapse": "^5.1.0",
+    "react-credit-card-input": "^1.1.5",
     "react-dom": "^16.8.0",
     "react-hook-form": "^6.11.3",
+    "react-payment-inputs": "^1.1.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "styled-components": "^5.2.1",
     "sweetalert2": "^10.10.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4",
